[gd_scene load_steps=7 format=3 uid="uid://c71o334g8k68x"]

[ext_resource type="Script" path="res://scenes/main/pause_menu.gd" id="1_h5ale"]
[ext_resource type="PackedScene" uid="uid://cf1dxk0u24mtl" path="res://scenes/ui/sound_button.tscn" id="4_gto8r"]

[sub_resource type="Animation" id="Animation_i26k7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_hql5r"]
resource_name = "in"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_a8uvh"]
resource_name = "out"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vk113"]
_data = {
"RESET": SubResource("Animation_i26k7"),
"in": SubResource("Animation_hql5r"),
"out": SubResource("Animation_a8uvh")
}

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_h5ale")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.172549, 0.298039, 0.639216, 0.352941)

[node name="AnimationPlayer" type="AnimationPlayer" parent="ColorRect"]
unique_name_in_owner = true
autoplay = "in"
libraries = {
"": SubResource("AnimationLibrary_vk113")
}

[node name="PauseMenuContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(150, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="PauseMenuContainer"]
custom_minimum_size = Vector2(180, 140)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="PauseMenuContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenuContainer/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="PauseMenuContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0.247059, 0.14902, 0.192157, 1)
theme_override_colors/font_outline_color = Color(0.247059, 0.14902, 0.192157, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 32
text = "Paused"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenuContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ResumeButton" parent="PauseMenuContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("4_gto8r")]
unique_name_in_owner = true
layout_mode = 2
text = "Resume"

[node name="OptionsButton" parent="PauseMenuContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("4_gto8r")]
unique_name_in_owner = true
layout_mode = 2
text = "Options"

[node name="MenuButton" parent="PauseMenuContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("4_gto8r")]
unique_name_in_owner = true
layout_mode = 2
text = "Quit to Menu"
